--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    command: gunicorn todoApp.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn django-todo.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
     expose:
