--- a/nginx.conf
+++ b/nginx.conf
@@ -13,5 +13,9 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+        location /static/ {
+                alias /var/www/html/django-todo/staticfiles/;
+            }
+
     }
 }
